--- a/css/app.css
+++ b/css/app.css
@@ -57,6 +57,7 @@ a{text-decoration: none;}
     grid-template-areas:
     "aside header"
     "aside main";
+    grid-template-columns: auto 1fr;
     width: 100%; height: 100%;
     position: relative;
     font-family: var(--fontFamily);
@@ -68,13 +69,16 @@ a{text-decoration: none;}
 
 
 @media screen and ( max-width: 1000px ){
-    .sidebar{display: none;}
+    .sidebar, .headerDesktop{display: none;}
     .headerMobile{display: flex};
 }
 
 @media screen and ( min-width: 1001px ){
-    .sidebar{display: flex;}
+    .sidebar, .headerDesktop{display: flex;}
 
-    .headerMobile{display: none;};
+    .headerMobile{display: none;}
+
+    /* header styles */
+    .searchContainer{display: flex; width: 80%; }
 }
     
