--- a/css/components.css
+++ b/css/components.css
@@ -68,7 +68,7 @@
 /* mobile header */
 .headerMobile{
     display: flex; flex-direction: column;
-    width: 100vw;
+    width: 100%;
     padding: var(--paddingComponent);
     gap: 1rem;
     border-bottom: 1px solid var(--primary);
@@ -148,3 +148,20 @@
     border-bottom: 1px solid var(--primary);
     margin: 0;
 }
+
+
+/* loading section */
+.loadingSection{
+    display: flex;
+    align-items: center; justify-content: center; 
+    gap: 1rem;
+    width: 100%; height: 100%;
+}
+
+.loadingText{
+    font-size: clamp(1rem, 1vw, 1.3rem);
+    font-weight: bold;
+    color: var(--primary);
+}
+
+.loadingImg{ max-width: 20px; }
